fixed issue of link being covered by animation

--- a/Style.css
+++ b/Style.css
@@ -61,7 +61,7 @@ overflow-y: hidden;
   bottom: 0;
   position: absolute;
   opacity: 0.1;
-  z-index:11;
+  z-index:-3;
   margin: 0%;
   padding: 0%;
   object-fit: cover;
